# off-chain-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-local  Justfile  README.md  build.rs  flake.nix  fly-prod.toml  fly.toml  local-run.sh
.cargo/: config.toml
.github/workflows/: build-check.yml  deploy-on-merge-to-main.yml  deploy-preview.yml
ADR/: ml-video-embed.md  video-embed.md
arch/: video-embed-pipeline.md
proto/: warehouse_events.proto
src/: app_state.rs  async_backend.rs  async_dedup_index.rs  auth.rs  config.rs  consts.rs  error.rs  events.rs  main.rs  metrics.rs  offchain_service.rs  private.rs  report.rs  types.rs  warehouse_events.rs  webhook.rs
src/canister/: migrate.rs  mlfeed_cache.rs  mod.rs  queries.rs  reclaim_canisters.rs  snapshot.rs  snapshot_v2.rs  upgrade_user_token_sns_canister.rs  upload_user_video.rs  utils.rs
src/canister/snapshot/: alert.rs  download.rs  mod.rs  snapshot_v2.rs  upload.rs  utils.rs
src/canister/utils/: deleted_canister.rs  mod.rs
src/duplicate/: videohash.rs
src/duplicate_video/: backfill.rs  mod.rs  redis_backfill.rs  video_hash_index.rs  videohash.rs  videohash_tests.rs
src/events/: event.rs  mod.rs  nsfw.rs  push_notifications.rs  queries.rs  types.rs  verify.rs
src/events/event/: login_successful.rs  storj.rs
src/posts/: delete_post.rs  events.rs  mod.rs  queries.rs  report_post.rs  types.rs  utils.rs  verify.rs
src/private/: mod.rs
src/private/storj/: admin.rs  mod.rs  nsfw.rs  posts.rs
src/qstash/: client.rs  duplicate.rs  hotornot_job.rs  mod.rs  verify.rs
src/sentry_webhook/: mod.rs
src/user/: delete_user.rs  mod.rs  utils.rs
src/utils/: api_response.rs  cf_images.rs  delegated_identity.rs  deleted_canister_index.rs  grpc_clients.rs  mod.rs  time.rs  yral_auth_jwt.rs
src/video_duplicate/: dhash.rs  frame.rs  hamming.rs
src/webhook/: signature.rs
