[package]
name = "off-chain-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.6", features = ["macros", "json"] }
candid = "0.10.6"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
ic-agent = "0.38.1"
rust-s3 = { version = "0.33.0", features = [
    "tokio-rustls-tls",
], default-features = false }
serde = "1.0.197"
serde_json = "1.0.114"
stringreader = "0.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
indicatif = { version = "0.17.8", features = ["futures"] }
tonic = { version = "0.12.2", features = ["tls-roots"] }
prost = "0.13.3"
tower = { version = "0.5.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["client", "client-legacy"] }
http = "1.0.0"
http-body-util = "0.1.2"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
headers = "0.4.0"
tonic-reflection = "0.12.2"
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
once_cell = "1.19.0"
yup-oauth2 = "11.0.0"
tonic-web = "0.12.2"
log = "0.4.21"
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata.git", features = [
    "rustls-tls",
], default-features = false }
config = { version = "0.14.0", features = ["toml"] }
serde_with = "3.7.0"
thiserror = "1.0.58"
env_logger = "0.11.3"
anyhow = "1.0.86"
serde_bytes = "0.11.14"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
exponential-backoff = "1.2.0"
cloud-storage = { version = "0.11.1", default-features = false, features = [
    "rustls-tls",
] }
k256 = { version = "0.13.3", features = ["jwk"] }
time = "0.3.36"
firestore = "0.43.1"
yral-canisters-client = { git = "https://github.com/yral-dapp/yral-common.git", rev = "be0420fe2b3cdabe0f65bdb03e8859b7946bd509", features = ["backend", "sns-governance", "sns-ledger", "sns-root"] }
yral-qstash-types = { git = "https://github.com/yral-dapp/yral-common.git", rev = "be0420fe2b3cdabe0f65bdb03e8859b7946bd509" }
base64 = "0.22.1"
google-cloud-bigquery = { version = "0.13.1", default-features = false, features = [
    "auth",
    "rustls-tls",
] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "icp-off-chain-agent"
path = "src/main.rs"

[features]
local-bin = []
