[package]
name = "off-chain-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.0", features = ["macros", "json"] }
candid = "0.10.6"
chrono = { version = "=0.4.38", features = ["serde"] }
futures = "0.3.30"
ic-agent = "0.38.1"
serde = "1.0.197"
serde_json = { version = "1.0.114", default-features = false }
stringreader = "0.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.13.0", features = ["tls-webpki-roots"] }
prost = "0.13.5"
tower = { version = "0.5.2", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["client", "client-legacy"] }
http = "1.0.0"
http-body-util = "0.1.2"
tonic-reflection = "0.13.0"
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
], default-features = false }
once_cell = "1.19.0"
yup-oauth2 = "11.0.0"
log = "0.4.21"
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata.git", features = [
    "rustls-tls",
], default-features = false }
config = { version = "0.14.0", features = ["toml"] }
serde_with = "3.7.0"
thiserror = "1.0.58"
anyhow = "1.0.86"
serde_bytes = "0.11.14"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
cloud-storage = { version = "0.11.1", default-features = false, features = [
    "rustls-tls",
] }
k256 = { version = "0.13.3", features = ["jwk"] }
time = "0.3.36"
firestore = "0.43.1"
base64 = "0.22.1"
google-cloud-bigquery = { version = "0.13.1", default-features = false, features = [
    "auth",
    "rustls-tls",
] }
hex = "0.4.3"
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-utils = "0.38.1"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["cors"] }
image = "0.24"
rayon = "1.8"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
storj-interface = { git = "https://github.com/yral-dapp/storj-interface", rev = "b824766e5a528deafa56fbb01ecb9f7e09a79e50", version = "0.1.0" }
# yral-metrics = { path = "../yral-common/metrics" }
yral-metadata-types = { git = "https://github.com/yral-dapp/yral-metadata", branch = "master", version = "0.1.0" }
sentry = { version = "0.37.0", default-features = false, features = [
    "rustls",
    "sentry-anyhow",
    "serde_json",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
] }
sentry-tower = { version = "0.37.0", features = ["axum", "axum-matched-path"] }
tracing = "0.1.41"
sentry-tracing = "0.37.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-futures = "0.2.5"
regex = "1.11.1"
google-cloud-alloydb-v1 = "0.2.0"
google-cloud-auth = "0.19.0"
yral-spacetime-bindings = { git = "https://github.com/dolr-ai/yral-spacetime", branch = "main", version = "0.1.0" }
rand = "0.9.1"
redis = { version = "0.29.1", features = [
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "json",
] }
bb8 = "0.9.0"
bb8-redis = "0.21.0"
fasthash = { version = "0.4.0", optional = true }
spacetimedb-sdk = "1.2.0"
async-channel = "2.3.1"

# ===== YRAL-COMMON DEPENDENCIES =====
# Remote (Git) - uncomment to use remote versions
yral-canisters-client = { git = "https://github.com/yral-dapp/yral-common.git", branch = "master", features = [
    "full",
] }
yral-ml-feed-cache = { git = "https://github.com/yral-dapp/yral-common", branch = "master", package = "ml-feed-cache" }
yral-alloydb-client = { git = "https://github.com/yral-dapp/yral-common", branch = "master", package = "alloydb-client" }
yral-qstash-types = { git = "https://github.com/yral-dapp/yral-common.git", branch = "master" }
yral-metrics = { git = "https://github.com/yral-dapp/yral-common", branch = "master" }

# Local (Path) - uncomment to use local development versions
# yral-canisters-client = { path = "../yral-common/canisters-client", features = [
#     "full",
# ] }
# yral-ml-feed-cache = { path = "../yral-common/ml-feed-cache", package = "ml-feed-cache" }
# yral-alloydb-client = { path = "../yral-common/alloydb-client", package = "alloydb-client" }
# yral-qstash-types = { path = "../yral-common/qstash-types", package = "qstash-types" }
# yral-metrics = { path = "../yral-common/metrics" }

[build-dependencies]
tonic-build = "0.13.0"

[[bin]]
name = "icp-off-chain-agent"
path = "src/main.rs"

[features]
local-bin = []
use-local-agent = []
# use-uplink = ["dep:uplink"]
prod-bin = ["dep:fasthash"]
